--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "discord.js": "^12.5.3",
+    "dotenv": "^10.0.0",
+    "https": "^1.0.0",
     "starwars": "^1.0.1"
   },
   "name": "r2-d2",
