--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "discord.js": "^12.5.3",
     "dotenv": "^10.0.0",
     "https": "^1.0.0",
+    "nodemon": "^2.0.13",
     "starwars": "^1.0.1"
   },
   "name": "r2-d2",
