--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "discord-nsfw": "^1.3.0",
     "discord.js": "^12.5.3",
     "dotenv": "^10.0.0",
     "https": "^1.0.0",
