--- a/package.json
+++ b/package.json
@@ -1,27 +1,20 @@
 {
-  "dependencies": {
-    "discord-nsfw": "^1.3.0",
-    "discord.js": "^12.5.3",
-    "dotenv": "^10.0.0",
-    "https": "^1.0.0",
-    "nodemon": "^2.0.13",
-    "starwars": "^1.0.1"
-  },
-  "name": "r2-d2",
-  "description": "Currently it can do only few things and is under devlopment.",
+  "name": "R2-D2-Discord-Bot",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/lucifer00911/R2-D2.git"
-  },
-  "author": "lucifer00911",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/lucifer00911/R2-D2/issues"
-  },
-  "homepage": "https://github.com/lucifer00911/R2-D2#readme"
+  "dependencies": {
+    "discord.js": "^12.5.3",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "openai": "^3.0.0",
+    "starwars": "^1.0.1"
+  }
 }
