--- a/package.json
+++ b/package.json
@@ -1,20 +1,26 @@
 {
-  "name": "R2-D2-Discord-Bot",
+  "name": "r2d2-discord-bot",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "devstart": "env-cmd -f ./dev.env node index.js"
+  },
+  "engines": {
+    "npm": ">=7.0.0",
+    "node": ">=16.0.0"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "discord.js": "^12.5.3",
-    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "openai": "^3.0.0",
     "starwars": "^1.0.1"
+  },
+  "devDependencies": {
+    "env-cmd": "^10.1.0"
   }
 }
