--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "devstart": "env-cmd -f ./dev.env node index.js"
+    "devstart": "env-cmd -f ./dev.env node index.js",
+    "prodstart": "env-cmd -f ./prod.env node index.js"
   },
   "engines": {
     "npm": ">=8.5.5",
